--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <link href="./assets/css/footer.css" rel="stylesheet" />
 
+    <link href="./assets/css/responsive.css" rel="stylesheet" />
+
 </head>
 
 <body class="body">
@@ -26,7 +28,7 @@
         <h1 class="encabezado__titulo">Traductor</h1>
         <div class="encabezado__menus">
             <div class="menu menu--principal">
-                <div class="menu__desplegable menu__desplegable--principal">Palabras populares
+                <div class="menu__desplegable menu__desplegable--principal">Idiomas
                     <div class="menu__list-container menu__list-container--principal">
                         <ul class="menu__lista menu__lista--principal">
                             <li class="menu__item menu__item--principal"><a class="menu__link menu__link--principal"
@@ -48,7 +50,7 @@
 
             <!-- ==============  Menu Lateral =============  -->
             <div class="menu menu--secundario">
-                <div class="menu__desplegable menu__desplegable--secundario">Palabras populares
+                <div class="menu__desplegable menu__desplegable--secundario">Palabras top
                     <div class="menu__list-container menu__list-container--secundario">
                         <ul class="menu__lista menu__lista--secundario">
                             <li class="menu__item menu__item--secundario"><a class="menu__link menu__link--secundario"
@@ -70,14 +72,16 @@
 
     </header>
     <main class="main">
-        <div id="car"></div>
-        <div class="carrusel">
-            <div class="slider-container">
-                <div class="slider-item item-active" value="Ingles">Ingles</div>
-                <div class="slider-item" value="Frances">Frances</div>
-                <div class="slider-item" value="Italiano">Italiano</div>
-                <div class="slider-item" value="Ingles">Portugues</div>
+        
+        <div class="carrusel-container">
+            <div class="carrusel__boton carrusel__boton--izquierdo" id="boton-izquierdo">&lt;</div>
+            <div class="carrusel">
+                <div class="carrusel__item carrusel__item-active" value="Ingles">Ingles</div>
+                <div class="carrusel__item" value="Frances">Frances</div>
+                <div class="carrusel__item" value="Italiano">Italiano</div>
+                <div class="carrusel__item" value="Ingles">Portugues</div>
             </div>
+            <div class="carrusel__boton carrusel__boton--derecho" id="boton-derecho">&gt;</div>
         </div>
        
         <div class="traductor">
