contador de palabras usando Map() y el localStorage

--- a/index.html
+++ b/index.html
@@ -50,18 +50,14 @@
             <!-- ============== Fin Menu principal ================ -->
 
             <!-- ==============  Menu Lateral =============  -->
-            <div class="menu menu--secundario">
-                <div class="menu__desplegable menu__desplegable--secundario">Palabras top
-                    <div class="menu__list-container menu__list-container--secundario">
-                        <ul class="menu__lista menu__lista--secundario">
-                            <li class="menu__item menu__item--secundario"><a class="menu__link menu__link--secundario"
-                                    href="">Loop</a></li>
-                            <li class="menu__item menu__item--secundario"><a class="menu__link menu__link--secundario"
-                                    href="">Handler</a></li>
-                            <li class="menu__item menu__item--secundario"><a class="menu__link menu__link--secundario"
-                                    href="">Throw</a></li>
-                            <li class="menu__item menu__item--secundario"><a class="menu__link menu__link--secundario"
-                                    href="">Main</a></li>
+            <div class="menu">
+                <div class="menu__desplegable">Palabras mas usadas
+                    <div class="menu__list-container">
+                        <ul class="menu__lista" data-tipo-lista>
+                            <li class="menu__item">Loop</li>
+                            <li class="menu__item">Handler</li>
+                            <li class="menu__item">Throw</li>
+                            <li class="menu__item">Main</li>
                         </ul>
                     </div>
 
